virtualservices/petstore-example-com-vs-no-routeoption.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore-example-com-vs
  namespace: gloo-system
  labels:
    app: httpbin
spec:
  virtualHost:
    domains:
    - 'petstore.example.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
      # optionsConfigRefs:
      #   delegateOptions:
      #   - name: cors-routeoptions
      #     namespace: gloo-system
    optionsConfigRefs:
      delegateOptions:
      - name: cors-virtualhostoptions
        namespace: gloo-system
